--- a/cpy.html
+++ b/cpy.html
@@ -5,46 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .one {
-            border: 1px solid red;
-            height: 100px;
-            width: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="./src/css/layui.css">
+    <script src="./jquery-3.3.1.js"></script>
 </head>
 <body>
-    <script id="demo" type="text/html">
-        <h3>{{ d.title }}</h3>
-        <div>{{! 注释 !}}</div>
-        <ul>
-        {{#layui.each(d.list, function(index, item){ }}
-          <li>
-            <span>{{ item.modname }}</span>
-            <span>{{ item.alias }}：</span>
-            <span>{{ item.site || '' }}</span>
-          </li>
-        {{#  }); }}
-        {{#  if(d.list.length === 0){ }}
-          无数据
-        {{#  } }} 
-        </ul>
-    </script>
     <script src="./src/layui.js"></script>
     <script>
-        var data = { //数据
-            "title":"Layui常用模块",
-            "list":[{"modname":"弹层","alias":"layer","site":"layer.layui.com"},{"modname":"表单","alias":"form"}]
-        };
-        layui.use('laytpl', function(){
-            var laytpl = layui.laytpl;
-            var getTpl = demo.innerHTML;
-
-            //直接解析字符
-            laytpl(getTpl).render(data, function(string){
-                console.log(string); // 贤心是一位公猿
-            });
-        });
     </script>
 </body>
 </html>
