feat: 添加部分注释

--- a/cpy.html
+++ b/cpy.html
@@ -165,6 +165,15 @@
               <option value="温州">温州</option>
               <option value="温州">台州</option>
               <option value="温州">绍兴</option>
+              <option value="温州">温州</option>
+              <option value="温州">台州</option>
+              <option value="kinghiee">kinghiee</option>
+              <option value="温州">温州</option>
+              <option value="温州">台州</option>
+              <option value="温州">绍兴</option>
+              <option value="温州">温州</option>
+              <option value="温州">台州</option>
+              <option value="n">n</option>
             </select>
           </div>
           <div class="layui-input-inline">
@@ -246,7 +255,6 @@
                 email: 'superhiee@163.com',
                 sex: '女'
             });
-            console.log('result', result);
         });
     </script>
 </body>
