--- a/cpy.html
+++ b/cpy.html
@@ -159,7 +159,7 @@
           </div>
           <div class="layui-input-inline">
             <select name="quiz2">
-              <option value="">请选择市</option>
+              <option value="111">请选择市</option>
               <option value="杭州">杭州</option>
               <option value="宁波" disabled="">宁波</option>
               <option value="温州">温州</option>
@@ -208,7 +208,7 @@
         <div class="layui-form-item">
           <label class="layui-form-label">开关-默认关</label>
           <div class="layui-input-block">
-            <input type="checkbox" name="close" lay-skin="switch" lay-text="ON|OFF">
+            <input type="checkbox" name="close" lay-skin="switch" lay-text="开|关">
           </div>
         </div>
         <div class="layui-form-item">
